karnc/tests/fixtures/negative/94_workers_with_cycle/src/commerce/b.karn
context commerce.b {
  consumes commerce.a
}
